--- a/Package.toml
+++ b/Package.toml
@@ -1,7 +1,7 @@
 [Package]
 Name = "Json"
-Version = "0.1.0"
-Description = "JSON implementation for the Serialize framework for Beef."
+Version = "0.1.1"
+Description = "JSON serialization format"
 
 [Dependencies]
-Serialize = "0.1.0"
+Serialize = "0.1.6"
